[project]
name = "vllm-vulkan"
version = "0.1.0"
description = "vLLM Vulkan backend using ggml-vulkan"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12,<3.13"
authors = [
    {name = "vLLM-Vulkan Contributors"}
]
keywords = ["vllm", "vulkan", "gpu", "inference", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "vllm>=0.13.0",
    "torch>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.entry-points."vllm.platform_plugins"]
vulkan = "vllm_vulkan:register"

[project.urls]
Homepage = "https://github.com/ericcurtin/vllm-vulkan"
Repository = "https://github.com/ericcurtin/vllm-vulkan"
Issues = "https://github.com/ericcurtin/vllm-vulkan/issues"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
module-name = "vllm_vulkan._vllm_vulkan_rs"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests/python"]
asyncio_mode = "auto"
